--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
   },
   "homepage": "https://github.com/timegated/landing-page-2020#readme",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.6.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "sass": "^1.50.0",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "4.8.1",
     "webpack-merge": "^5.1.1"
   },
   "dependencies": {
