--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass": "^1.50.0",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
@@ -38,6 +37,7 @@
     "webpack-merge": "^5.1.1"
   },
   "dependencies": {
-    "animate.css": "^4.1.0"
+    "animate.css": "^4.1.0",
+    "sass": "^1.62.0"
   }
 }
